# semestreII

./: CMakeLists.txt  DVD.cpp  Irregular.cpp  Ponk.cpp  README.md  Star.cpp  Trigonometia.cpp  bandera.cpp  banderaConFierro.cpp  circulo.cpp  coloresPrimarios.cpp  cuadrado.cpp  isodecagono.cpp  poo_trigo.cpp  poo_trigo.h  triangulo.cpp
